--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,14 @@ env:
 jobs:
   include:
     - stage: build
+      name: Build docker image
       script: docker build -t ${IMAGE} ${PWD}
-    - stage: tag master
+    - stage: tag
+      name: Tag the master build as latest
       if: branch = master
       script: docker tag ${IMAGE} ${IMAGE}:latest
-    - stage: tag version
+    - stage: tag
+      name: Tag the version build using github tag name
       if: branch != master
       script: docker tag ${IMAGE} ${IMAGE}:${TRAVIS_TAG}
     - stage: login
