--- a/.travis.yml
+++ b/.travis.yml
@@ -50,4 +50,7 @@ jobs:
         - docker tag ${IMAGE} ${IMAGE}:${TRAVIS_TAG}
         - docker push ${IMAGE}:${TRAVIS_TAG}
 
-
+cache:
+  bundler: true
+  directories:
+    - $HOME/docker-images
