--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ jobs:
     - stage: push
       name: Tag and push the master build as latest
       if: branch = master
-      env: TRAVIS_PULL_REQUEST=false
+      #env: TRAVIS_PULL_REQUEST=false
       script:
         - ls -la ${CACHE_FOLDER}
         - if [[ -f ${CACHE_FILE} ]]; then docker load -i ${CACHE_FILE}; fi
@@ -38,7 +38,7 @@ jobs:
     - stage: push
       name: Tag and push the version build using github tag name
       if: branch != master
-      env: TRAVIS_PULL_REQUEST=false
+      #env: TRAVIS_PULL_REQUEST=false
       script:
         - ls -la ${CACHE_FOLDER}
         - if [[ -f ${CACHE_FILE} ]]; then docker load -i ${CACHE_FILE}; fi
@@ -46,10 +46,6 @@ jobs:
         - docker tag ${IMAGE} ${IMAGE}:${TRAVIS_TAG}
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - docker push ${IMAGE}:${TRAVIS_TAG}
-    - stage: cleanup
-      name: Remove the docker image from the cache
-      script:
-        - rm -rf ${CACHE_FILE}
 
 cache:
   bundler: true
