--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ jobs:
         - docker save ${IMAGE} | gzip -c > ${CACHE_FILE}
     - stage: push
       name: Tag and push the master build as latest
-      if: branch = master and env(TRAVIS_PULL_REQUEST) = false
+      if: branch = master AND env(TRAVIS_PULL_REQUEST) = false
       script:
         - ls -la ${CACHE_FOLDER}
         - if [[ -f ${CACHE_FILE} ]]; then docker load -i ${CACHE_FILE}; fi
@@ -36,7 +36,7 @@ jobs:
         - docker push ${IMAGE}:latest
     - stage: push
       name: Tag and push the version build using github tag name
-      if: branch != master and env(TRAVIS_PULL_REQUEST) = false
+      if: branch != master AND env(TRAVIS_PULL_REQUEST) = false
       script:
         - ls -la ${CACHE_FOLDER}
         - if [[ -f ${CACHE_FILE} ]]; then docker load -i ${CACHE_FILE}; fi
