--- a/kubernetes/templates/0.dockersecret.yaml
+++ b/kubernetes/templates/0.dockersecret.yaml
@@ -1,3 +1,4 @@
+{{ if and .Values.registry .Values.username .Values.password }}
 apiVersion: v1
 kind: Secret
 type: kubernetes.io/dockerconfigjson
@@ -6,3 +7,4 @@ metadata:
   namespace: {{ .Values.namespace }}
 data:
   .dockerconfigjson: {{ template "imagePullSecret" .Values }}
+{{ end }}
