--- a/values.yaml
+++ b/values.yaml
@@ -1,4 +1,7 @@
 server:
+  # required by ingress to create the ssl certificate
+  hostname: "s2.antimatter-studios.com"
+
   message_size_limit: "50000000"
   relay_nets: "10.0.0.0/8"
   relay_host: ""
