fix a missing configmap

--- a/kubernetes/templates/3.postfix.yaml
+++ b/kubernetes/templates/3.postfix.yaml
@@ -21,6 +21,8 @@ spec:
             - configMapRef:
                 name: {{ .Values.name }}
             - configMapRef:
+                name: {{ .Values.namespace }}
+            - configMapRef:
                 name: database-read
             - configMapRef:
                 name: database-common
