--- a/kubernetes/templates/3.postfix.yaml
+++ b/kubernetes/templates/3.postfix.yaml
@@ -21,7 +21,7 @@ spec:
             - configMapRef:
                 name: {{ .Values.name }}
             - configMapRef:
-                name: {{ .Values.namespace }}
+                name: connection-map
             - configMapRef:
                 name: database-read
             - configMapRef:
