fix the quoting problem

--- a/.travis.yml
+++ b/.travis.yml
@@ -67,12 +67,13 @@ jobs:
         - kubectl get pods
         - kubectl scale --replicas=0 deployment/${NAME} || true
         - kubectl get deployments
+        - a=$(kubectl get configmap connection-map -o 'jsonpath="{.data.HOSTNAME}"'); echo $a;
         - helm template
             -f $PWD/values.yaml
             --set name=${NAME}
-            --set server.hostname=$(kubectl get configmap connection-map -o 'jsonpath="{.data.HOSTNAME}"')
-            --set port.haproxy_smtpd=$(kubectl get configmap connection-map -o 'jsonpath="{.data.POSTFIX_PORT}"')
-            --set port.plain_smtpd=$(kubectl get configmap connection-map -o 'jsonpath="{.data.POSTFIX_PORT}"')
+            --set server.hostname=$(kubectl get configmap connection-map -o=jsonpath="{.data.HOSTNAME}")
+            --set port.haproxy_smtpd=$(kubectl get configmap connection-map -o=jsonpath="{.data.POSTFIX_PORT}")
+            --set port.plain_smtpd=$(kubectl get configmap connection-map -o=jsonpath="{.data.POSTFIX_SUBMISSION_PORT}")
             --set namespace=${NAMESPACE}
             --set repository=${IMAGE}:${TRAVIS_BUILD_ID}
             $PWD/kubernetes | kubectl apply -f -
