--- a/.travis.yml
+++ b/.travis.yml
@@ -71,7 +71,7 @@ jobs:
         - helm template
             -f $PWD/values.yaml
             --set name=${NAME}
-            --set server.hostname=$(kubectl get configmap connection-map -o=jsonpath="{.data.HOSTNAME}")
+            --set hostname=$(kubectl get configmap connection-map -o=jsonpath="{.data.HOSTNAME}")
             --set port.haproxy_smtpd=$(kubectl get configmap connection-map -o=jsonpath="{.data.POSTFIX_PORT}")
             --set port.plain_smtpd=$(kubectl get configmap connection-map -o=jsonpath="{.data.POSTFIX_SUBMISSION_PORT}")
             --set namespace=${NAMESPACE}
