restore the travis build id since it was useful for immutable pipelines

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,9 +43,9 @@ jobs:
         - if [[ -f ${CACHE_FILE} ]]; then docker load -i ${CACHE_FILE}; fi
         - docker images
         - docker tag ${IMAGE} ${IMAGE}:latest
+        - docker tag ${IMAGE} ${IMAGE}:${TRAVIS_BUILD_ID}
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - docker push ${IMAGE}:latest
-        - docker tag ${IMAGE}:latest ${IMAGE}:${TRAVIS_BUILD_ID}
         - docker push ${IMAGE}:${TRAVIS_BUILD_ID}
     - stage: push
       name: Tag and push the version build using github tag name
@@ -55,9 +55,9 @@ jobs:
         - if [[ -f ${CACHE_FILE} ]]; then docker load -i ${CACHE_FILE}; fi
         - docker images
         - docker tag ${IMAGE} ${IMAGE}:${TRAVIS_TAG}
+        - docker tag ${IMAGE} ${IMAGE}:${TRAVIS_BUILD_ID}
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - docker push ${IMAGE}:${TRAVIS_TAG}
-        - docker tag ${IMAGE}:${TRAVIS_TAG} ${IMAGE}:${TRAVIS_BUILD_ID}
         - docker push ${IMAGE}:${TRAVIS_BUILD_ID}
     - stage: deploy
       name: Deploy the master branch to the kubernetes cluster
