--- a/.travis.yml
+++ b/.travis.yml
@@ -71,9 +71,9 @@ jobs:
             -f $PWD/values.yaml
             --set name=${NAME}
             --set namespace=${NAMESPACE}
-            --set hostname=$(kubectl get configmap connection-map -o=jsonpath="{.data.HOSTNAME}")
-            --set haproxy_smtpd=$(kubectl get configmap connection-map -o=jsonpath="{.data.POSTFIX_PORT}")
-            --set plain_smtpd=$(kubectl get configmap connection-map -o=jsonpath="{.data.POSTFIX_SUBMISSION_PORT}")
+            --set hostname=$(kubectl get cm services-info -o=jsonpath="{.data.HOSTNAME}")
+            --set haproxy_smtpd=$(kubectl get cm services-info -o=jsonpath="{.data.POSTFIX_PORT}")
+            --set plain_smtpd=$(kubectl get cm services-info -o=jsonpath="{.data.POSTFIX_SUBMISSION_PORT}")
             --set repository=${IMAGE}:${TRAVIS_BUILD_ID}
             $PWD/kubernetes | kubectl apply -f -
         - kubectl scale --replicas=${REPLICAS} deployment/${NAME}
