add a node selector to make sure it runs on the right ip address which is exported in the dns records

--- a/kubernetes/templates/2.postfix.yaml
+++ b/kubernetes/templates/2.postfix.yaml
@@ -11,6 +11,8 @@ spec:
         app: {{ .Values.namespace }}
         role: {{ .Values.name }}
     spec:
+      nodeSelector:
+        mailserver: "true"
       imagePullSecrets:
         - name: {{ .Values.name }}
       containers:
