improve the tls encryption options

--- a/kubernetes/templates/2.postfix.yaml
+++ b/kubernetes/templates/2.postfix.yaml
@@ -15,6 +15,12 @@ spec:
         mailserver: "true"
       imagePullSecrets:
         - name: {{ .Values.name }}
+      initContainers:
+        - name: disable-tcp-window-scaling
+          image: busybox
+          command: ["sysctl", "-w", "net.ipv4.tcp_window_scaling=0"]
+          securityContext:
+            privileged: true
       containers:
         - name: {{ .Values.name }}
           image: {{ .Values.repository }}
