--- a/kubernetes/templates/2.postfix.yaml
+++ b/kubernetes/templates/2.postfix.yaml
@@ -19,6 +19,16 @@ spec:
         - name: {{ .Values.name }}
           image: {{ .Values.repository }}
           imagePullPolicy: Always
+          readinessProbe:
+            tcpSocket:
+              port: {{ .Values.plain_smtpd }}
+            initialDelaySeconds: 30
+            periodSeconds: 10
+          livenessProbe:
+            tcpSocket:
+              port: {{ .Values.plain_smtpd }}
+            initialDelaySeconds: 30
+            periodSeconds: 10
           envFrom:
             - configMapRef:
                 name: {{ .Values.name }}
