change logging to include timestamps

--- a/supervisord-conf/rsyslog.conf
+++ b/supervisord-conf/rsyslog.conf
@@ -1,4 +1,4 @@
 $ModLoad imuxsock
-$template noTimestampFormat,"%syslogtag%%msg%\n"
-$ActionFileDefaultTemplate noTimestampFormat
+$template TraditionalFormat,"%timegenerated% %HOSTNAME% %syslogtag%%msg:::drop-last-lf%\n"
+$ActionFileDefaultTemplate TraditionalFormat
 *.*;auth,authpriv.none /dev/stdout
