--- a/kubernetes/templates/1.certs.yaml
+++ b/kubernetes/templates/1.certs.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: {{ .Values.namespace }}
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    kubernetes.io/tls-acme: "true"
+    cert-manager.io/cluster-issuer: letsencrypt-production
 spec:
   tls:
     - secretName: tls-postfix
