--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,9 @@ env:
 
 before_install:
   - openssl aes-256-cbc -K $encrypted_c25bfdc08df8_key -iv $encrypted_c25bfdc08df8_iv -in kubeconfig.enc -out kubeconfig -d
-  - KUBE_LATEST_VERSION="v1.14.1"
-  - HELM_LATEST_VERSION="v2.13.1"
-  - HELM=https://storage.googleapis.com/kubernetes-helm/helm-${HELM_LATEST_VERSION}-linux-amd64.tar.gz
+  - KUBE_LATEST_VERSION="v1.19.0"
+  - HELM_LATEST_VERSION="v3.3.1"
+  - HELM=https://get.helm.sh/helm-${HELM_LATEST_VERSION}-linux-amd64.tar.gz
   - KUBECTL=https://storage.googleapis.com/kubernetes-release/release/${KUBE_LATEST_VERSION}/bin/linux/amd64/kubectl
   - curl -L ${KUBECTL} -o $PWD/kubectl
   - curl -L ${HELM} | tar xzO linux-amd64/helm > $PWD/helm
