first attempt to connect with kubernetes cluster

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,3 +42,33 @@ jobs:
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    env:
+      NAME: postfix
+      IMAGE: ghcr.io/kubernetes-mail-server/${NAME}:latest
+      NAMESPACE: mail-server
+      REPLICAS: 1
+      HELM: https://get.helm.sh/helm-v3.3.1-linux-amd64.tar.gz
+      KUBECTL: https://storage.googleapis.com/kubernetes-release/release/v1.19.0/bin/linux/amd64/kubectl
+    steps:
+      - 
+        name: Install Tools
+        run: |
+          curl -L ${KUBECTL} -o $PWD/kubectl
+          curl -L ${HELM} | tar xzO linux-amd64/helm > $PWD/helm
+          chmod +x $PWD/helm $PWD/kubectl
+          export -p PATH=$PATH:$PWD
+          ls -la $PWD
+      - 
+        name: Setup kubeconfig
+        run: |
+          echo $KUBECONFIG > $PWD/kubeconfig
+          export KUBECONFIG=$PWD/kubeconfig
+      - 
+        name: Scale to zero
+        run: |
+          kubectl get pods -n ${NAMESPACE}
+          kubectl scale --replicas=0 -n ${NAMESPACE} deployment/${NAME} || true
+          kubectl get deployments -n ${NAMESPACE}
